# ResumeMindAI-BE

./: .env.sample  .gitignore  Dockerfile  Dockerfile.taskiq-worker  Dockerfile.temporal-server  Dockerfile.temporal-ui  Dockerfile.temporal-worker  Dockerfile.worker  Makefile  README.md  app.py  main.py  newrelic.ini  prefect.yaml  pyproject.toml
.github/workflows/: cd.yml  health_check.yml  health_check_worker.yml  lint.yml  test.yml
agents/document_classifier/: __init__.py  agent.py  schemas.py
alembic/: env.py
alembic/versions/: 13eab4ede80e_add_users_table.py  2b3b3b1b833d_add_is_active_field_to_llm_providers.py  5cc099bb7657_add_documents_table_for_resume_parsing.py  6910b90f676b_add_models_for_llm_providers_feature.py
api/: documents.py  health.py  llm_providers.py  user_graph.py
api/schemas/: __init__.py  document.py  errors.py  graph.py  llm_provider.py  llm_provider_test.py
configs/: __init__.py  falkordb.py  lifecycle.py  postgres.py  rate_limiter.py  redis.py  s3.py  settings.py  supabase.py  temporal.py
flows/: health.py  tasks.py  trigger.py
middlewares/: api_key.py  auth.py  idempotency.py
models/: __init__.py  document.py  llm_provider.py  user.py
ontology/: __init__.py  exceptions.py  graph_processor.py
ontology/normalizers/: __init__.py  company.py  education.py  skill.py
ontology/schemas/: __init__.py  common.py  constants.py  cover_letter.py  job_description.py  resume.py
prompts/: document_classifier.txt  sample.txt
services/: __init__.py  cache.py  document.py  encryption.py  graph_provider.py  graph_service.py  idempotency.py  llm_provider.py  metrics.py  prompts.py
tasks/: __init__.py  document_parser.py  health_server.py  health_task.py  scheduler.py  worker.py
temporal/: __init__.py  client.py  config.py  schedules.py  worker.py
temporal/activities/: __init__.py  health_activities.py
temporal/workflows/: __init__.py  health_workflow.py
tests/: conftest.py  test_health.py
tests/agents/: test_document_classifier_agent.py
tests/api/: test_documents.py  test_graph_endpoint.py  test_graph_schemas.py  test_health.py  test_llm_providers.py  (+3 more)
(+27 files in other folders)
